// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Watch mode flows Runs Jest once by default and shows usage 1`] = `
Array [
  "
Watch Usage
 › Press o to only run tests related to changed files.
 › Press p to filter by a filename regex pattern.
 › Press t to filter by a test name regex pattern.
 › Press q to quit watch mode.
 › Press Enter to trigger a test run.
",
]
`;

exports[`Watch mode flows Runs Jest once with collectCoverage enabled in globalConfig 1`] = `
Array [
  "
Watch Usage
 › Press o to only run tests related to changed files.
 › Press p to filter by a filename regex pattern.
 › Press t to filter by a test name regex pattern.
 › Press r to open coverage report.
 › Press q to quit watch mode.
 › Press Enter to trigger a test run.
",
]
`;
